tests/fail/ExceptionHandling.java
package fail;
import java.lang.Exception;

public class ExceptionHandling {


    public void tryWithoutCatch(){
        int i = 0;
        try{
            i--;
        }
    }
}
